# onnx-embed-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: run_test.yml
depth-test/depth/: Cargo.toml
depth-test/depth/src/: main.rs
onnx-embedding/: Cargo.toml  build.rs
onnx-embedding/src/: file_extraction.rs  lib.rs
ort-test/: Cargo.toml
ort-test/src/: main.rs
