[package]
name = "onnx-embedding"
version = "0.1.3"
edition = "2021"
description = "Downloads and extracts the libonnxruntime to a byte string"
license = "MIT"

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"
zip = "3.0.0"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
pathdiff = "0.2"
tempfile = "3.19.1"
fslock = "0.2.1"
walkdir = "2.5.0"

[lib]
proc-macro = true
